Update codes.html removed emoji

--- a/codes.html
+++ b/codes.html
@@ -755,7 +755,7 @@ public class Main
 `
 },
 {
-  title: "15. TEJ pattern 😘",
+  title: "15. TEJ pattern",
   language: "", 
   description: "",
   code: `import java.util.Scanner;
