--- a/codes.html
+++ b/codes.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bujji’s Code Library 💻</title>
+  <title>HEMA’s Code Library 💻</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
